--- a/index.html
+++ b/index.html
@@ -50,53 +50,90 @@
         </div>
     </section>
     <section class="main-hotels">
-        <div>
+        <div id="accomodation-block">
             <div>
-                <h3>Accommodations in Marseille</h3>
+                <h3 class="title-block">Accommodations in Marseille</h3>
             </div>
             <div class="holels-accomodation">
                 <div class="hotel-accomodation">
                     <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-regular fa-star fa-sm"></i>
+                    </div>
 
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
-
+                    <img src="images/hotels/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel Cannebiere">
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                    </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
-
+                    <img src="images/hotels/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Cannebiere">
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-regular fa-star fa-sm"></i>
+                    </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
-
+                    <img src="images/hotels/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel Cannebiere">
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-regular fa-star fa-sm"></i>
+                        <i class="fa-regular fa-star fa-sm"></i>
+                    </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
-
+                    <img src="images/hotels/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Hotel Cannebiere">
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-regular fa-star fa-sm"></i>
+                    </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5>Auberge la Cannebiere</h5>
-                    <p>Night starting at <strong>52€‎</strong></p>
-
+                    <img src="images/hotels/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Cannebiere">
+                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <div class="stars">
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                        <i class="fa-solid fa-star fa-sm"></i>
+                    </div>
                 </div>
             </div>
             <div>
-                <h5>Show more</h5>
+                <h5 id="show-more">Show more</h5>
             </div>
         </div>
-        <div>
+        <div id="popular-block">
             <div>
                 <h3>Most Popular</h3><i class="fa-solid fa-star"></i>
             </div>
