P2 first part finished with accomodation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <img src="images/Booki@3x.png" alt="Logo Booki">
             <div class="nav-links">
                 <ul>
-                    <li><a href="#">Accomodations</a></li>
-                    <li><a href="#">Activities</a></li>
+                    <li><a href="#accomodations">Accomodations</a></li>
+                    <li><a href="#activities">Activities</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,16 +49,16 @@
             <p>More than 500 accommodations are available in this <br>city</p>
         </div>
     </section>
-    <section class="main-hotels">
+    <section class="main-hotels" id="accomodations">
         <div id="accomodation-block">
             <div>
                 <h3 class="title-block">Accommodations in Marseille</h3>
             </div>
             <div class="holels-accomodation">
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Hotel Cannebiere">
+                    <img src="images/hotels/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebiere">
                     <h5 class="hotel-name">Auberge la Cannebiere</h5>
-                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <p class="night-price">Night starting at <strong>25€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -69,8 +69,8 @@
 
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
+                    <img src="images/hotels/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel du port">
+                    <h5 class="hotel-name">Hotel du port</h5>
                     <p class="night-price">Night starting at <strong>52€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -81,9 +81,9 @@
                     </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
-                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <img src="images/hotels/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Les mouettes Hotel">
+                    <h5 class="hotel-name">Les mouettes Hotel</h5>
+                    <p class="night-price">Night starting at <strong>76€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -93,9 +93,9 @@
                     </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
-                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <img src="images/hotels/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hotel de la mer">
+                    <h5 class="hotel-name">Hotel de la mer</h5>
+                    <p class="night-price">Night starting at <strong>46€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -105,9 +105,9 @@
                     </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
-                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <img src="images/hotels/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge Le Panier">
+                    <h5 class="hotel-name">Auberge Le Panier</h5>
+                    <p class="night-price">Night starting at <strong>23€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -117,9 +117,9 @@
                     </div>
                 </div>
                 <div class="hotel-accomodation">
-                    <img src="images/hotels/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel Cannebiere">
-                    <h5 class="hotel-name">Auberge la Cannebiere</h5>
-                    <p class="night-price">Night starting at <strong>52€‎</strong></p>
+                    <img src="images/hotels/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hotel chez Amina">
+                    <h5 class="hotel-name">Hotel chez Amina</h5>
+                    <p class="night-price">Night starting at <strong>96€‎</strong></p>
                     <div class="stars">
                         <i class="fa-solid fa-star fa-sm"></i>
                         <i class="fa-solid fa-star fa-sm"></i>
@@ -134,17 +134,58 @@
             </div>
         </div>
         <div id="popular-block">
-            <div>
+            <div id="most-pop-head">
                 <h3>Most Popular</h3><i class="fa-solid fa-star"></i>
             </div>
             <div class="holels-popular">
                 <div class="hotel-popular">
-
+                    <img src="images/hotels/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Morning Sun Hotel">
+                    <div class="text-pop">
+                        <h5 class="hotel-name-pop">Morning Sun Hotel</h5>
+                        <p class="night-price-pop">Night starting at <strong>128€‎</strong></p>
+                        <div class="stars">
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="hotel-popular">
+                    <img src="images/hotels/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                        alt="Au coeur de l'eau Bed and Breakfast">
+                    <div class="text-pop">
+                        <h5 class="hotel-name-pop">Au coeur de l'eau Bed and Breakfast</h5>
+                        <p class="night-price-pop">Night starting at <strong>71€‎</strong></p>
+                        <div class="stars">
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-regular fa-star fa-sm"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="hotel-popular">
+                    <img src="images/hotels/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Morning Sun Hotel">
+                    <div class="text-pop">
+                        <h5 class="hotel-name-pop">Tout bleu et Blanc Hotel</h5>
+                        <p class="night-price-pop">Night starting at <strong>68€‎</strong></p>
+                        <div class="stars">
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-solid fa-star fa-sm"></i>
+                            <i class="fa-regular fa-star fa-sm"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
         </div>
+    </section>
+    <section id="activities">
+
     </section>
 
 
