--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
-                        <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                        <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                     </div>
 
                 </div>
@@ -92,7 +92,7 @@
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
-                        <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                        <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                     </div>
                 </div>
                 <div class="hotel-accomodation">
@@ -103,8 +103,8 @@
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
-                        <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
-                        <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                        <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
+                        <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                     </div>
                 </div>
                 <div class="hotel-accomodation">
@@ -116,7 +116,7 @@
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
                         <i class="fa-solid fa-star fa-xs"></i>
-                        <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                        <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                     </div>
                 </div>
                 <div class="hotel-accomodation">
@@ -167,7 +167,7 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                            <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                         </div>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-solid fa-star fa-xs"></i>
                             <i class="fa-solid fa-star fa-xs"></i>
-                            <i class="fa-solid fa-star fa-xs" id="fa-regular-star"></i>
+                            <i class="fa-solid fa-star fa-xs fa-regular-star"></i>
                         </div>
                     </div>
                 </div>
